--- a/core/clients/web/templates/administration/mailboxes.html
+++ b/core/clients/web/templates/administration/mailboxes.html
@@ -173,6 +173,16 @@
                         </label>
                     </div>
                 </div>
+
+                <div class="form-group" style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #333;">
+                    <label>
+                        <input type="checkbox" name="provision_now" checked>
+                        <strong style="color: #28a745;">provision on mail server immediately</strong>
+                    </label>
+                    <div style="font-size: 11px; color: #888; margin-top: 5px;">
+                        if checked, mailbox will be created on mail.recaria.org server with a temporary password
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" onclick="hideCreateModal()" class="btn btn-secondary">
